--- a/practice_coding.html
+++ b/practice_coding.html
@@ -154,11 +154,6 @@
 
     </div>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/GqzpqlA3kds?si=x-d-_Ahzm-FyEHgS"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
     <script>
         const selectedLang = localStorage.getItem("selectedLanguage");
         const titleEl = document.getElementById("lang-title");
@@ -194,11 +189,7 @@
            <div class="tutorial-section" style="padding: 0; overflow: hidden; border: none;">
             <h3 style="color: #FF6F61; margin: 0 0 10px 0;">🎥 สอน HTML5 พื้นฐาน (BorntoDev)</h3>
             <div style="position: relative; padding-bottom: 56.25%; height: 0; border-radius: 15px; overflow: hidden;">
-              <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
-                src="https://www.youtube.com/watch?v=DzjO4d9nh_k" 
-                title="YouTube video player" frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-              </iframe>
+              <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"  src="https://www.youtube.com/embed/JEqaTyGu5u4?si=D4Ai4XEQc2fuBwex" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
           </div>
           <p style="margin-top: 15px; color: #555;">ลองสร้าง <code>&lt;h1&gt;</code> ของคุณเองในช่องขวามือดูสิ!</p>
