--- a/about_us.html
+++ b/about_us.html
@@ -428,14 +428,14 @@
         <section>
             <div class="slide-content">
                 <div class="side-image">
-                    <img src="C:\Users\Dell\Downloads\1000039418.jpg" alt="Team Leader Profile">
+                    <img src="1000040157.jpg" alt="Team Leader Profile">
                     <div class="image-overlay"></div>
                 </div>
                 <div class="side-info">
                     <div class="role-badge">Project Leader</div>
                     <h1 class="name-title">นายวชิรวิทย์ คงมี<br>
 
-                        <p class="small-text">นะโม ยังมี ตัสสะ รักเธอนะจ๊ะ ไม่มีตัดใจ</p>
+                        <p class="small-text">จ้องคอมแล้วตาเบลอ แล้วถ้าจ้องเธอจะได้เบอร์มั้ยนะ?</p>
                     </h1>
                     <div class="divider"></div>
                     <div class="bio-title"><span>📂</span> หน้าที่และความรับผิดชอบ</div>
@@ -452,19 +452,20 @@
         <section>
             <div class="slide-content">
                 <div class="side-image">
-                    <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2070&auto=format&fit=crop"
-                        alt="Information Designer">
+                    <img src="3058.jpg" alt="Information Designer">
                     <div class="image-overlay"></div>
                 </div>
                 <div class="side-info">
                     <div class="role-badge">Information Architect</div>
-                    <h1 class="name-title">ธีรวัฒน์<br>ปิ่นทอง</h1>
+                    <h1 class="name-title">ปกป้อง มุสิกะโปดก<br>
+                        <p class="small-text">อยากเป็นเบอร์ดี้จัง จะได้เป็นหนึ่งในใจคุณ</p>
+                    </h1>
                     <div class="divider"></div>
                     <div class="bio-title"><span>📘</span> หน้าที่และความรับผิดชอบ</div>
                     <ul class="responsibilities">
-                        <li>วิเคราะห์และจัดหมวดหมู่ฐานข้อมูลปัญหา</li>
-                        <li>ตรวจสอบความถูกต้องของเนื้อหาในระบบ</li>
-                        <li>ออกแบบลำดับขั้นตอนการแก้ปัญหา (Detail Logic)</li>
+                        <li>ดูแลส่วนงาน Mini-Games และ Interactive Content</li>
+                        <li>ทดสอบระบบ (Quality Assurance) ทุกฟังก์ชัน</li>
+                        <li>จัดทำเอกสารประกอบโครงงานและสื่อนำเสนอ</li>
                     </ul>
                 </div>
             </div>
@@ -474,19 +475,19 @@
         <section>
             <div class="slide-content">
                 <div class="side-image">
-                    <img src="https://images.unsplash.com/photo-1518770660439-4636190af475?q=80&w=2070&auto=format&fit=crop"
-                        alt="Content Strategist">
+                    <img src="1000012639.jpg" alt="Content Strategist">
                     <div class="image-overlay"></div>
                 </div>
                 <div class="side-info">
                     <div class="role-badge">Technical Strategist</div>
-                    <h1 class="name-title">รัตพล<br>ยอดสง่า</h1>
+                    <h1 class="name-title">อิทธิพัทธ์ สถตินันท์<br>
+                        <p class="small-text">ความหล่อแค่ทำให้เราเพ้อ แต่ความเป็นเธออ่ะทำให้เรารัก</p>
+                    </h1>
                     <div class="divider"></div>
                     <div class="bio-title"><span>🖥️</span> หน้าที่และความรับผิดชอบ</div>
                     <ul class="responsibilities">
-                        <li>ดูแลส่วนงาน Mini-Games และ Interactive Content</li>
-                        <li>ทดสอบระบบ (Quality Assurance) ทุกฟังก์ชัน</li>
-                        <li>จัดทำเอกสารประกอบโครงงานและสื่อนำเสนอ</li>
+                        <li>วิเคราะห์และจัดหมวดหมู่ฐานข้อมูลปัญหา</li>
+                        <li>ตรวจสอบความถูกต้องของเนื้อหาในระบบ</li>
                     </ul>
                 </div>
             </div>
@@ -501,7 +502,7 @@
 
     <!-- Local MP3 Player -->
     <audio id="bg-music" loop>
-        <source src="C:\Users\Dell\Downloads\df83c3ca-b058-404f-bd58-50e0e721e4ce.mp3" type="audio/mpeg">
+        <source src="df83c3ca-b058-404f-bd58-50e0e721e4ce.mp3" type="audio/mpeg">
     </audio>
 
     <script>
